Please develop Android application capable of: * Store each unique device's data in history, use another table/list * Stored data should persist * Implement devices pairing (if possible) * Use list adapter
EDIT - new requirement
Application should be able to log signal information to text file after pressing button. The same button should stop logging process. File format:
[SSID] [MAC] [SIGNAL STRENGTH %] [RSSI]

Zrobione:

* Scanning for available bluetooth devices +
* Displaying all found devices as a list +
http://stackoverflow.com/questions/10795424/how-to-get-the-bluetooth-devices-as-a-list
* Device specific data should be displayed after selecting any record + ( wyświetlane za pomocą Toastów)

Dodatkowe:
https://github.com/apache/pig/blob/89c2e8e76c68d0d0abe6a36b4e08ddc56979796f/src/org/apache/pig/impl/util/ObjectSerializer.java
przechowywanie tablicy w sharedpreferances

Powyższy kod ograniczony jest licencja
Użyje setów

--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -26,16 +26,31 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/button2"
         android:text="@string/save_button"/>
-
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button3"
+        android:text="@string/save_file_button"/>
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button4"
+        android:text="@string/history_button"/>
     <TextView
         android:id="@+id/textview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button3"/>
+        android:layout_below="@id/button5"/>
+    <TextView
+        android:id="@+id/textview2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textview1"/>
     <ListView
         android:id="@+id/listview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textview1"/>
-
+        android:layout_below="@+id/textview2"/>
 </RelativeLayout>
