--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -11,18 +11,13 @@
     <TextView
         android:id="@+id/textview4"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/save_button"
-        android:layout_below="@id/textview4"/>
+        android:text="@string/header"/>
     <TextView
         android:id="@+id/textview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/button1"/>
+        android:layout_below="@id/textview4"/>
     <TextView
         android:id="@+id/textview2"
         android:layout_width="wrap_content"
